# screen-translator

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  border_window.py  capture.py  config.py  control_window.py  main.py  pyproject.toml  result_window.py  selector.py  stability.py  translator.py
docs/specs/: 2026-03-29-jpeg-compression-design.md  2026-03-29-reasoning-effort-design.md  2026-03-29-screen-translator-design.md  2026-03-31-stability-check-design.md  2026-04-01-content-change-detection-design.md  2026-04-03-sme-threshold-percentage-design.md
tests/: test_border_window.py  test_capture.py  test_config.py  test_control_window.py  test_result_window.py  test_selector.py  test_stability.py  test_translator.py
