[project]
name = "screen-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mss>=10.1.0",
    "openai>=2.30.0",
    "pillow>=12.1.1",
    "pyside6>=6.11.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
